Code cleanup (#5)